--- a/package.json
+++ b/package.json
@@ -10,16 +10,18 @@
     "@testing-library/react": "^9.3.2",
     "@testing-library/user-event": "^7.1.2",
     "axios": "^0.19.2",
-    "husky": "^4.2.5",
+    "express": "^4.17.1",
+    "express-favicon": "^2.0.1",
     "javascript-time-ago": "^2.0.13",
     "lint-staged": "^10.2.11",
+    "path": "^0.12.7",
     "prettier": "^2.0.5",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
     "react-scripts": "3.4.1"
   },
   "scripts": {
-    "start": "react-scripts start",
+    "start": "node server.js",
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
@@ -37,17 +39,6 @@
       "last 1 chrome version",
       "last 1 firefox version",
       "last 1 safari version"
-    ]
-  },
-  "husky": {
-    "hooks": {
-      "pre-commit": "lint-staged"
-    }
-  },
-  "lint-staged": {
-    "**/*.{js,json}": [
-      "prettier-eslint --write",
-      "git add"
     ]
   },
   "devDependencies": {
